crates/pg_syntax/tests/snapshots/postgres_regress/float4@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '          -INFINiTY   '::float4;"
---
SelectStmt@0..40
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..39
    TypeCast@7..39
      AConst@7..31
        Sconst@7..31 "'          -INFINiTY   '"
      Typecast@31..33 "::"
      TypeName@33..39
        Ident@33..39 "float4"
  Ascii59@39..40 ";"

