crates/pg_syntax/tests/snapshots/postgres_regress/float4@33.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'NaN x'::float4;"
---
SelectStmt@0..23
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..22
    TypeCast@7..22
      AConst@7..14
        Sconst@7..14 "'NaN x'"
      Typecast@14..16 "::"
      TypeName@16..22
        Ident@16..22 "float4"
  Ascii59@22..23 ";"

