crates/pg_syntax/tests/snapshots/postgres_regress/float4@35.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'Infinity'::float4 + 100.0;"
---
SelectStmt@0..34
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..33
    AExpr@7..33
      TypeCast@7..25
        AConst@7..17
          Sconst@7..17 "'Infinity'"
        Typecast@17..19 "::"
        TypeName@19..25
          Ident@19..25 "float4"
      Whitespace@25..26 " "
      Ascii43@26..27 "+"
      Whitespace@27..28 " "
      AConst@28..33
        Fconst@28..33 "100.0"
  Ascii59@33..34 ";"

