crates/pg_syntax/tests/snapshots/postgres_regress/float4@36.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'Infinity'::float4 / 'Infinity'::float4;"
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..46
    AExpr@7..46
      TypeCast@7..25
        AConst@7..17
          Sconst@7..17 "'Infinity'"
        Typecast@17..19 "::"
        TypeName@19..25
          Ident@19..25 "float4"
      Whitespace@25..26 " "
      Ascii47@26..27 "/"
      Whitespace@27..28 " "
      TypeCast@28..46
        AConst@28..38
          Sconst@28..38 "'Infinity'"
        Typecast@38..40 "::"
        TypeName@40..46
          Ident@40..46 "float4"
  Ascii59@46..47 ";"

