crates/pg_syntax/tests/snapshots/postgres_regress/float4@39.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'nan'::float4 / '0'::float4;"
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..34
    AExpr@7..34
      TypeCast@7..20
        AConst@7..12
          Sconst@7..12 "'nan'"
        Typecast@12..14 "::"
        TypeName@14..20
          Ident@14..20 "float4"
      Whitespace@20..21 " "
      Ascii47@21..22 "/"
      Whitespace@22..23 " "
      TypeCast@23..34
        AConst@23..26
          Sconst@23..26 "'0'"
        Typecast@26..28 "::"
        TypeName@28..34
          Ident@28..34 "float4"
  Ascii59@34..35 ";"

