crates/pg_syntax/tests/snapshots/postgres_regress/float4@42.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT f.* FROM FLOAT4_TBL f WHERE f.f1 <> '1004.3';"
---
SelectStmt@0..52
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..8 "f"
      Ascii46@8..9 "."
      AStar@9..10
        Ascii42@9..10 "*"
  Whitespace@10..11 " "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  RangeVar@16..28
    Ident@16..26 "FLOAT4_TBL"
    Whitespace@26..27 " "
    Alias@27..28
      Ident@27..28 "f"
  Whitespace@28..29 " "
  Where@29..34 "WHERE"
  Whitespace@34..35 " "
  AExpr@35..51
    ColumnRef@35..39
      Ident@35..36 "f"
      Ascii46@36..37 "."
      Ident@37..39 "f1"
    Whitespace@39..40 " "
    NotEquals@40..42 "<>"
    Whitespace@42..43 " "
    AConst@43..51
      Sconst@43..51 "'1004.3'"
  Ascii59@51..52 ";"

